\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.10.2++}{
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Show the link functions of all
      distributional parameters in the \code{summary}
      output. (#277)
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix problems in various post-processing methods 
      when applied to models with the reserved variable 
      \code{intercept} in group-level terms thanks to
      the GitHub user ASKurz. (#279)
      \item Fix an unexpected error in \code{predict} and related 
      methods when setting \code{sample_new_levels = "gaussian"}
      in models with only one group-level effect.
      Thanks to Timothy Mastny. (#286)
    }
  }
}

\section{CHANGES IN VERSION 1.10.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Allow setting priors on noise-free
      variables specified via function \code{me}.
      \item Add arguments \code{Ksub}, \code{exact_loo} 
      and \code{group} to method \code{kfold} for 
      defining omitted subsets according to a
      grouping variable or factor.
      \item Allow addition argument \code{se}
      in \code{skew_normal} models.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Ensure correct behavior of horseshoe
      and lasso priors in multivariate models
      thanks to Donald Williams.
      \item Allow using \code{identity} links on
      all parameters of the \code{wiener} family
      thanks to Henrik Singmann. (#276)
      \item Use reasonable dimnames in the output
      of \code{fitted} when returning linear predictors
      of ordinal models thanks to the GitHub user atrolle. (#274)
      \item Fix problems in \code{marginal_smooths}
      occuring for multi-membership models thanks to
      Hans Tierens.
    }
  }
}

\section{CHANGES IN VERSION 1.10.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Rebuild monotonic effects from scratch
      to allow specifying interactions with other